GNOME Bugzilla – Bug 706398
increased intensity ANSI code no longer working
Last modified: 2013-09-26 20:43:51 UTC
With the upgrade to the latest Gnome, I unfortunately noticed a problem with gnome-terminal. I've been using \e[01m to easily see where the prompt is. Wikipedia describes this as: "Bold or increased intensity" Previously vte implemented this as "bold _and_ increased intensity". As my primary goal was the intensity, this was quite sufficient. The new version unfortunately only does bold, breaking my usage. :( I can't really find an alternative plan here. AFAICT, no other escape code will give me a bright color that is agnostic as far as the current color. Since I use the same $PS1 with various terminals in various configurations, this is rather essential. So please bring back the old behaviour. :) (bug 616436 might be related)
Can you bisect vte to see where the change was?
Hmm... maybe the problem is in gnome-terminal rather than vte. I've gone back as far as 0.32.0 with vte, and I'm still not getting the old behaviour.
There's nothing that gnome-terminal could do to influence this.
It appears there is, as I found the offending change. :) Commit 84099c36 in gnome-terminal changed things so that vte_terminal_set_color_bold_rgba() started getting called no matter what. And the logic in gnome-terminal to set the default bold colour differs from the logic in vte. Commenting out that call in gnome-terminal restores the previous behaviour.
Created attachment 255864 [details] [review] screen: Use NULL for bold colour when same-as-fg is used Can you try this patch please?
Seems to do the trick. :)