screen: Use NULL for bold colour when same-as-fg is used

https://bugzilla.gnome.org/show_bug.cgi?id=706398
(cherry picked from commit ab688fa1d20a62127c69994f3d3fc064bf2fd9c6)